examples/errors/parsing/spec_take-no-pat.cn
fun incP : Int -> Pred Int [spec] = {
  n -> return (n + 1)
}

fun f : Int -> Pred Int [spec] = {
  n ->
  take = incP n;
  return n
}

main : () [impure] = ()
